# battery_mockup

./: CMakeLists.txt  package.xml  setup.py
action/: CheckBattery.action
common/src/battery_mockup/: battery_model.py
ros/config/: config_battery_mockup.yaml
ros/doc/: README.md
ros/launch/: battery_mockup.launch  launch_battery.launch
ros/scripts/: battery_mockup_node
ros/src/: ChargeActionServer  CheckBatteryActionServer  StartBattery
ros/src/battery_mockup_ros/: battery_mockup_node.py
srv/: CheckPercentage.srv
