<?xml version="1.0"?>
<package>
 <name>battery_mockup</name>
 <version>1.0.0</version>
 <description>
 Battery charge and discharge mockup.
 </description>

 <license>GPLv3</license>

 <author email="cguerraazevedo@tecnico.ulisboa.pt">Carlos Azevedo</author>
 <maintainer email="cguerraazevedo@tecnico.ulisboa.pt">Carlos Azevedo</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>message_generation</build_depend>
 <build_depend>message_runtime</build_depend>

 <run_depend>message_generation</run_depend>
 <run_depend>message_runtime</run_depend>
</package>
